--- a/package.json
+++ b/package.json
@@ -38,5 +38,6 @@
     "simple-find-lyrics": "^0.0.1",
     "systeminformation": "^5.17.12",
     "tweetnacl": "^1.0.3"
-  }
-}
+  },
+
+} "engines": { "node": "18.20.2" }
