--- a/package.json
+++ b/package.json
@@ -39,5 +39,5 @@
     "systeminformation": "^5.17.12",
     "tweetnacl": "^1.0.3"
   },
-
-} "engines": { "node": "18.20.2" }
+"engines": { "node": "18.20.2" }
+} 
